# NpucloudAPI

./: README.md  pyproject.toml
.github/: test_pytorch.py
.github/workflows/: inference-test.yml
examples/resnet18/: main.py
examples/whisper/: main.py  requirements.txt
src/: __main__.py  types.py
src/npucloud_client/: __init__.py  __main__.py  core.py  delete_model.py  inference_core.py  pytorch_wrapper.py  types.py  upload_model.py
